feat: Implement full authentication system with PostgreSQL backend
Backend Changes:
- Add FastAPI backend with PostgreSQL integration
- Implement user authentication with JWT tokens
- Add signup and login API endpoints
- Create SQLAlchemy models for User table
- Add password hashing with bcrypt
- Implement CORS for frontend integration
- Add comprehensive error handling

Frontend Changes:
- Create AuthPanel component with login/signup tabs
- Add sliding authentication panel UI
- Implement form validation and error handling
- Add password visibility toggles
- Integrate with backend API endpoints
- Store JWT tokens in localStorage
- Update navigation with auth button
- Improve theme toggle with minimalist icons
- Add smooth scrolling for navigation links

Database:
- Set up PostgreSQL database with coaching_center schema
- Create users table with proper constraints
- Add database connection and session management

Security:
- Password hashing with bcrypt
- JWT token-based authentication
- Input validation and sanitization
- Secure error messages

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,10 @@
 fastapi
-uvicorn[standard] 
+uvicorn[standard]
+sqlalchemy
+psycopg2-binary
+python-multipart
+python-jose[cryptography]
+passlib[bcrypt]
+pydantic
+python-dotenv
+email-validator 
